# Mnemo

./: .dockerignore  .env.template  .gitignore  INSTALL.MD  README.md  ROADMAP.md  TROUBLESHOOTING.MD  TROUBLESHOOTING_EN.MD  docker-compose.yml  docker_compose.yml  dockerfile  dockerfile.rvc  dockerfile.scheduler  install.sh  memory.md.template  memory.sql  mnemo.sh  pyproject.toml  requirements.audio.txt  requirements.txt  router_model.joblib  training_data.jsonl  uncertain_cases.jsonl
Manual/: README.md  calendar.md  crews.md  goap.md  routing.md  sandbox.md  scheduler.md  scheduler_testing.md  voice.md
agent_memory/: generate_training_data.py  retrain_router.py  router_model.joblib  seed_kg.py  train_router.py  training_data.jsonl  uncertain_cases.jsonl
docker/: .env.example  install.sh  patch_crewai_tracing.py  patch_fairseq.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: ConfirmModal.module.css  ConfirmModal.tsx  MessageBubble.module.css  MessageBubble.tsx  NavBar.module.css  NavBar.tsx  WebSuggestPanel.module.css  WebSuggestPanel.tsx
frontend/src/pages/: CalendarPage.module.css  CalendarPage.tsx  ChatPage.module.css  ChatPage.tsx  KnowledgePage.module.css  KnowledgePage.tsx  LoginPage.module.css  LoginPage.tsx  MemoryPage.module.css  MemoryPage.tsx  NodalPage.module.css  NodalPage.tsx  OnboardingModal.module.css  OnboardingModal.tsx  ProjectsPage.module.css  ProjectsPage.tsx  SessionsPage.module.css  SessionsPage.tsx  SettingsPage.module.css  SettingsPage.tsx  VoicePage.module.css  VoicePage.tsx
src/Mnemo/: api.py  context.py  crew.py  crew_graph.py  db.sql  guardrails.py  init_db.py  main.py  scheduler.py  status.py
src/Mnemo/assets/: kg_seed.db
src/rvc_service/: main.py
src/waifuclawd/: crew.py  main.py  session.json
tests/: conftest.py  test_active_learning.py  test_assistant_api.py  test_assistant_tools.py  test_calendar_tools.py  test_calendar_write.py  test_curiosity.py  test_deadline_terrain.py  test_dream_compression.py  test_goap_autonomy.py  test_goap_confirmations.py  test_goap_kg.py  test_goap_planner.py  test_ingest_tools.py  test_kg_schema.py  test_kg_tools.py  test_memory_archive.py  test_memory_classifier.py  test_memory_gap_report.py  test_memory_tools.py  test_note_writer.py  test_plan_runner.py  test_plan_store.py  test_planner_crew.py  test_procedural_memory.py  test_recon_crew.py  test_retrieval.py  test_retrieval_budget.py  test_router.py  test_scheduler.py  test_session_cycle.py  test_shell_tools.py  test_web_tools.py
(+58 files in other folders)
