[project]
name = "waifuclawd"
version = "0.1.0"
description = "WaifuClawd using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "crewai>=0.130.0",
    "ollama>=0.4.0",
    "numpy>=1.26.0", 
    "python-dotenv>=1.0.0", 
]

[project.scripts]
waifuclawd = "waifuclawd.main:run"
run_crew = "waifuclawd.main:run"
train = "waifuclawd.main:train"
replay = "waifuclawd.main:replay"
test = "waifuclawd.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
