[project]
name = "Mnemo"
version = "0.1.0"
description = "Mnemo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "crewai>=0.130.0",
    "ollama>=0.4.0",
    "numpy>=1.26.0", 
    "python-dotenv>=1.0.0", 
]
[tool.pytest.ini_options]
markers = [
    "ollama: tests nécessitant Ollama + nomic-embed-text en fonctionnement",
]
[project.scripts]
Mnemo = "Mnemo.main:run"
run_crew = "Mnemo.main:run"
train = "Mnemo.main:train"
replay = "Mnemo.main:replay"
test = "Mnemo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
